--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "@react-navigation/native-stack": "^6.8.0",
     "base-64": "^1.0.0",
     "expo": "~46.0.8",
+    "expo-dev-client": "~1.3.1",
     "expo-status-bar": "~1.4.0",
-    "firebase": "9.6.1",
+    "firebase": "^9.12.1",
     "react": "18.0.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.0.0",
     "react-icons": "^4.4.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
+    "recoil": "^0.7.5",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
