--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "base-64": "^1.0.0",
-    "expo": "~46.0.8",
+    "expo": "^48.0.9",
     "expo-dev-client": "~1.3.1",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
@@ -28,6 +28,7 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "recoil": "^0.7.5",
+    "start": "^5.1.0",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
